--- a/e-commerce/src/pages/home/home.scss
+++ b/e-commerce/src/pages/home/home.scss
@@ -1,3 +1,33 @@
+@import "../../styles/variables.scss";
+
 .home{
-    background-color: red;
+    
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(4 , 1fr);
+    grid-auto-rows: minmax(180px , auto);
+
+    .box{
+        padding: 20px;
+        border-radius: 10px;
+        // background-color: rgba(173, 216, 230, 0.521);
+        border: 1px solid $soft_bg;
+    }
+    .box1{
+        grid-column: span 1;
+        grid-row: span 3;
+    }
+    .box4{
+        grid-column: span 1;
+        grid-row: span 3;
+    }
+    .box7{
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+
+
+
+
 }
