--- a/e-commerce/src/components/menu/menu.scss
+++ b/e-commerce/src/components/menu/menu.scss
@@ -1,4 +1,6 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
+
 
 .menu{
 
@@ -15,6 +17,10 @@
         font-weight: 200;
         color: $soft-color;
         text-transform: uppercase;
+
+        @include lg{
+            display: none;
+        }
     }
 
     .listItem{
@@ -27,5 +33,11 @@
 
     &:hover{
         background-color: $soft-bg;
+    }
+
+    .listItemTitle{
+        @include lg{
+            display: none;
+        }
     }
 }
