--- a/e-commerce/src/chartBox/chartbox.scss
+++ b/e-commerce/src/chartBox/chartbox.scss
@@ -1,6 +1,12 @@
+@import "../styles/responsive.scss";
+
 .chartbox {
     display: flex;
     height: 100%;
+
+    @include sm{
+        flex-direction: column;
+    }
 
     .boxInfo {
         flex: 3;
@@ -9,39 +15,61 @@
         justify-content: space-between;
         // background-color: red;
 
+        @include sm{
+            gap: 20px;
+        }
+
         .title {
             display: flex;
             align-items: center;
             gap: 10px;
+
+            @include sm {
+                font-size: 14px;
+            }
+
+        }
+
+        h1 {
+            @include xxl {
+                font-size: 20px;
+            }
         }
 
     }
 
-    .chartInfo{
+    .chartInfo {
         flex: 2;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
 
-        .chart{
+        .chart {
             width: 100%;
             height: 100%;
         }
 
-        .texts{
+        .texts {
             display: flex;
             flex-direction: column;
             text-align: right;
-        
-            .percentage{
+
+            .percentage {
                 font-weight: bold;
                 font-size: 20px;
+
+                @include xxl {
+                    font-size: 16px;
+                }
+
             }
 
-            .duration{
+
+
+            .duration {
                 font-size: 14px;
             }
-        
+
         }
 
 
