--- a/e-commerce/src/components/topBox/topbox.scss
+++ b/e-commerce/src/components/topBox/topbox.scss
@@ -1,7 +1,12 @@
+@import "../../styles/responsive.scss";
 
 .topBox{
     h1{
         margin-bottom: 20px;
+
+        @include xxl{
+            font-size: 24px;
+        }
     }
 
     .list{
@@ -21,6 +26,13 @@
                     height: 30px;
                     object-fit: cover;
                     border-radius: 50%;
+
+                    @include xxl{
+                        display: none;
+                    }
+                    @include lg{
+                        display: block;
+                    }
                 }
 
                 .userTexts{
@@ -34,6 +46,13 @@
                     }
                     .email{
                         font-size: 12px;
+
+                        @include xxl{
+                            display: none;
+                        }
+                        @include lg{
+                            display: block;
+                        }
                     }
                 }
             }
